hphp/test/zend/good/ext/xsl/tests/bug54446.php.expectf

Warning: runtime error: file %s/ line 7 element output in %s/bug54446.php on line 37

Warning: File write for %s/bug54446test.txt refused in %s/bug54446.php on line 37

Warning: runtime error: file %s/ line 7 element output in %s/bug54446.php on line 37

Warning: xsltDocumentElem: write rights for %s/bug54446test.txt denied in %s/bug54446.php on line 37
OK, no file created
OK, file exists

Warning: runtime error: file %s/ line 7 element output in %s/bug54446.php on line 65

Warning: File write for %s/bug54446test.txt refused in %s/bug54446.php on line 65

Warning: runtime error: file %s/ line 7 element output in %s/bug54446.php on line 65

Warning: xsltDocumentElem: write rights for %s/bug54446test.txt denied in %s/bug54446.php on line 65
OK, no file created
